# countable

./: .darcs-boring  .gitignore  .travis.yml  LICENSE  Makefile  changelog.md  countable.cabal  hindent-all  package.yaml  stack.yaml
src/Data/: Countable.hs  Empty.hs  Expression.hs  Searchable.hs  Singular.hs  Subsingular.hs
src/Data/Function/: Eq.hs  Foldable.hs  Show.hs  Traversable.hs
test/: .gitignore  Count.hs  Count.ref  Golden.hs  Makefile  Show.hs  Three.hs  TypeName.hs  count.Bool.ref  count.Integer.ref  count.Word8.ref
