name: countable
version: 0.1
cabal-version: -any
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Ashley Yakeley <ashley@semantic.org>
maintainer: Ashley Yakeley <ashley@semantic.org>
build-depends: base ==4.*
cabal-version: >= 1.6
stability:
homepage:
package-url:
bug-reports:
synopsis: Countable, Searchable, Finite, Empty classes
description:
category: Data
author: Ashley Yakeley <ashley@semantic.org>
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Data.Searchable Data.Countable Data.Empty
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions: EmptyDataDecls ExistentialQuantification
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options: -Wall
hugs-options:
nhc98-options:
jhc-options:
